# samotpravil-mcp

./: .dockerignore  .env.postman.example  .env.samotpravil.example  .env.swaggerhub.example  .gitignore  .swagger-mcp.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  eslint.config.js  mcp.json.example  mcp.json.example.org  package-lock.json  package.json  postman-mcp.sh  samotpravil-mcp-python.sh  samotpravil-mcp.sh  server.json  setup.sh  smithery.yaml  swagger-mcp.sh
.cursor/: mcp.json
.githooks/: pre-commit
.github/: CODEOWNERS  branch-protection.example.json  dependabot.yml  pull_request_template.md  release-please-config.json  rename-repo.trigger
data/: collection.snapshot.json  openapi.yaml  org-migration.targets.json  python-sdk-methods.json  python-sdk-schemas.json  python-sdk-track.json  snapshot.meta.json  tool-catalog.json  tools.manifest.json  upstream-wishlist.json
docs/: API_WISHLIST.md  BRANCH_PROTECTION.md  DEPENDENCY_DEFERRALS.md  DOCS_SITE.md  ECOSYSTEM.md  EXAMPLES.md  MAINTAINER_STATUS.md  MIGRATION_V1_TO_V2.md  ORG_MIGRATION.md  ORG_MIGRATION_PREFLIGHT.md  ORG_MIGRATION_RUNBOOK.md  PUBLISH.md  PYTHON_SDK.md  PYTHON_SDK_TRACK.md  RELEASE_MERGE.md  RELEASE_PLEASE.md  RELEASE_v1.1.0.md  RELEASE_v1.2.0.md  (+13 more)
python/: README.md  pyproject.toml
python/examples/: async_send.py  bridge_demo.py  sync_send.py
python/scripts/: generate_schemas.py
python/src/samotpravil_mcp/: __init__.py  bridge.py  executor.py  methods.py  safety.py  server.py
python/tests/: test_bridge.py  test_methods.py  test_server.py
(+138 files in other folders)
